--- a/WebThuvien/Views/Admin/Themhoatdong.cshtml
+++ b/WebThuvien/Views/Admin/Themhoatdong.cshtml
@@ -34,13 +34,13 @@
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label>Thời gian bắt đầu</label>
-                            <input required name="THOIGIANBATDAU" type="datetime" class="form-control">
+                            <input required name="THOIGIANBATDAU" type="datetime-local" class="form-control">
                         </div>
                     </div>
                     <div class="col-md-6 col-sm-12">
                         <div class="form-group">
                             <label>Thời gian kết thúc</label>
-                            <input required name="THOIGIANKETTHUC" class="form-control" type="datetime">
+                            <input required name="THOIGIANKETTHUC" class="form-control" type="datetime-local">
                         </div>
                     </div>
 
