--- a/WebThuvien/Views/Sach/Chitietsach.cshtml
+++ b/WebThuvien/Views/Sach/Chitietsach.cshtml
@@ -92,8 +92,8 @@
                                         }
                                     </h4>
                                     <p><strong>Tổng số quyển :</strong> 01</p>
-                                    <p><strong>Loại sách:</strong> <a href="#" style="color:#f62457">@ViewBag.loaisach.TENTHELOAI</a></p>
-                                    <p><strong>Lĩnh vực:</strong> <a href="#" style="color:#f62457">@ViewBag.linhvuc.TENLINHVUC</a></p>
+                                    <p><strong>Loại sách:</strong> <a href="/Sach/Timkiemsach?noidungnhap=&linhvuc=&loaisach=@ViewBag.loaisach.MATHELOAI" style="color:#f62457">@ViewBag.loaisach.TENTHELOAI</a></p>
+                                    <p><strong>Lĩnh vực:</strong> <a href="/Sach/Timkiemsach?noidungnhap=&loaisach=0&linhvuc=@ViewBag.linhvuc.MALINHVUC" style="color:#f62457">@ViewBag.linhvuc.TENLINHVUC</a></p>
                                     <p><strong>Nhà xuất bản :</strong> <a href="#" style="color:#f62457">@ViewBag.nxb.TENNXB</a></p>
                                     <p><strong>Đặt mượn sách :</strong>  01</p>
                                     <a href="/Sach/TaiSach?MaSach=@ViewBag.sach.MASACH" class="btn btn-dark-gray">Tải xuống</a>
