--- a/WebThuvien/Views/Hoatdong/Index.cshtml
+++ b/WebThuvien/Views/Hoatdong/Index.cshtml
@@ -15,9 +15,9 @@
                                 <div class="news-list-box">
                                     <div class="single-news-list">
                                         <figure>
-                                            <a href="~/Hoatdong/Chitiet?mabaidang=@item.MABAIDANG" ><img style="width:500px;height:500px;" src="~/Content/ClientContent/Hoatdong/@item.HINHANH1" alt="@item.TIEUDE"></a>
+                                            <a href="~/Hoatdong/Chitiet?mabaidang=@item.MABAIDANG"><img style="width:500px;height:500px;" src="~/Content/ClientContent/Hoatdong/@item.HINHANH1" alt="@item.TIEUDE"></a>
                                         </figure>
-                                        <div class="content-block" style="max-width:500px;max-height:500px;" >
+                                        <div class="content-block" style="max-width:500px;max-height:500px;">
                                             <div class="member-info">
                                                 <div class="content_meta_category">
                                                     <span class="arrow-right"></span>
@@ -52,17 +52,48 @@
                                     </div>
                                 </div>
                             }
-                            
+
 
                             <nav class="navigation pagination text-center">
-                                <h2 class="screen-reader-text">Posts navigation</h2>
+                                <h2 class="screen-reader-text">Trang</h2>
                                 <div class="nav-links">
-                                    <a class="prev page-numbers" href="#."><i class="fa fa-long-arrow-left"></i> Previous</a>
-                                    <a class="page-numbers" href="#.">1</a>
-                                    <span class="page-numbers current">2</span>
-                                    <a class="page-numbers" href="#.">3</a>
-                                    <a class="page-numbers" href="#.">4</a>
-                                    <a class="next page-numbers" href="#.">Next <i class="fa fa-long-arrow-right"></i></a>
+                                    @{
+                                        if (ViewBag.currentPage != 1)
+                                        {
+                                            int prevPage = @ViewBag.currentPage - 1;
+                                            <a class="prev page-numbers" href="/Hoatdong/Index?pagenumber=@prevPage"><i class="fa fa-long-arrow-left"></i> Trang trước</a>
+                                        }
+                                        else
+                                        {
+                                            <a class="prev page-numbers" href="#."><i class="fa fa-long-arrow-left"></i> Trang trước</a>
+                                        }
+
+                                    }
+                                    @for (int i = 1; i <= ViewBag.countPage; i++)
+                                    {
+                                        if (i == ViewBag.currentPage)
+                                        {
+                                            <a href="/Sach/Timkiemsach?noidungnhap=@ViewBag.noidungnhap&loaisach=@ViewBag.loaisach&linhvuc=@ViewBag.linhvuc&pagenumber=@i"><span class="page-numbers current">@i</span></a>
+
+                                        }
+                                        else if (i < ViewBag.currentPage + 3 || i > ViewBag.currentPage - 3)
+                                        {
+                                            <a href="/Sach/Timkiemsach?noidungnhap=@ViewBag.noidungnhap&loaisach=@ViewBag.loaisach&linhvuc=@ViewBag.linhvuc&pagenumber=@i"><span class="page-numbers">@i</span></a>
+                                        }
+                                    }
+                                    @{
+                                        if (@ViewBag.currentPage != @ViewBag.countPage)
+                                        {
+                                            int nextPage = @ViewBag.currentPage + 1;
+                                            <a class="next page-numbers" href="/Hoatdong/Index?pagenumber=@nextPage">Trang sau <i class="fa fa-long-arrow-right"></i></a>
+
+                                        }
+                                        else
+                                        {
+                                            <a class="next page-numbers" href="#.">Trang sau <i class="fa fa-long-arrow-right"></i></a>
+
+                                        }
+                                    }
                                 </div>
                             </nav>
                         </div>
