--- a/WebThuvien/Views/Admin/DSNXB.cshtml
+++ b/WebThuvien/Views/Admin/DSNXB.cshtml
@@ -55,8 +55,8 @@
                                                 <td>@i</td>
                                                 <td style="display:none;"><textarea style="max-width:50px;" type="text" class="Ma" placeholder="Mã NXB">@item.MANXB</textarea></td>
                                                 <td style="max-width:250px"><textarea style="max-width:250px;" type="text" class="Ten" placeholder="Tên NXB">@item.TENNXB</textarea></td>
-                                                <td style="max-width:400px"><textarea style="max-width:400px;" type="text" class="Diachi" placeholder="Tên NXB">@item.DIACHI</textarea></td>
-                                                <td style="max-width:250px"><textarea style="max-width:250px;" type="text" class="Email" placeholder="Email">@item.EMAIL</textarea></td>
+                                                <td style="width:400px"><textarea style="min-width:300px;" type="text" class="Diachi" placeholder="Tên NXB">@item.DIACHI</textarea></td>
+                                                <td style="min-width:250px"><textarea style="min-width:250px;" type="text" class="Email" placeholder="Email">@item.EMAIL</textarea></td>
                                                 <td>
                                                     <a class="delete" title="Xóa"><i class="fa fa-remove" style="color:#22a1be;font-size:20px;text-align:center"></i></a>
                                                     <a target="_blank" title="Xem chi tiết" href="/Admin/Timkiemsach?noidungnhap=&linhvuc=&loaisach=&tacgia=&nxb=@item.TENNXB"><i class="fa fa-eye" style="color:#042297;font-size:20px;text-align:center"></i></a>
