--- a/WebThuvien/Views/Admin/Index.cshtml
+++ b/WebThuvien/Views/Admin/Index.cshtml
@@ -72,10 +72,10 @@
                         <div class="h5 mb-md-0">Thống kê mượn trả</div>
                         <div class="form-group mb-md-0">
                             <select class="form-control form-control-sm selectpicker">
-                                <option value="">Tuần trước</option>
-                                <option value="">Tháng trước</option>
-                                <option value="">6 tháng trước</option>
-                                <option value="">1 năm trước</option>
+                                <option value="2020">Năm 2020</option>
+                                <option value="2021" selected>Năm 2021</option>
+                                <option value="2022">Năm 2022</option>
+                                <option value="2023">Năm 2023</option>
                             </select>
                         </div>
                     </div>
