--- a/WebThuvien/Views/Admin/UploadSach.cshtml
+++ b/WebThuvien/Views/Admin/UploadSach.cshtml
@@ -29,7 +29,7 @@
                 <div class="form-group row">
                     <label class="col-sm-12 col-md-2 col-form-label">Số trang</label>
                     <div class="col-sm-12 col-md-10">
-                        <input required class="form-control" type="number" name="SOTRANG">
+                        <input required class="form-control" type="number" value="0" name="SOTRANG">
                     </div>
                 </div>
                 <div class="form-group row">
@@ -48,7 +48,7 @@
                 <div class="form-group row">
                     <label class="col-sm-12 col-md-2 col-form-label">Lượt xem</label>
                     <div class="col-sm-12 col-md-10">
-                        <input required class="form-control"  name="LUOTXEM" type="number">
+                        <input required class="form-control" value="0" name="LUOTXEM" type="number">
                     </div>
                 </div>
                 <div class="form-group row">
