update trang xem chi tiết

--- a/WebThuvien/Views/Admin/Index.cshtml
+++ b/WebThuvien/Views/Admin/Index.cshtml
@@ -216,7 +216,7 @@
                         <div class="d-flex justify-content-between align-items-end">
                             <div class="text-white">
                                 <div class="font-14">Số lượng bạn đọc</div>
-                                <div class="font-24 weight-500">250</div>
+                                <div class="font-24 weight-500">@ViewBag.Soluongbandoc</div>
                             </div>
                             <div class="max-width-150">
                                 <div id="surgery-chart"></div>
