--- a/WebThuvien/Views/Admin/Themhoatdong.cshtml
+++ b/WebThuvien/Views/Admin/Themhoatdong.cshtml
@@ -66,8 +66,8 @@
                     <div class="col-md-12 col-sm-12">
                         <div class="form-group">
                             <div class="html-editor pd-20 card-box mb-30">
-                                <p>Nội dung</p>
-                                <textarea required name="NOIDUNG" class="form-control"></textarea>
+                                <p>Nội dung (3000)</p>
+                                <textarea maxlength="3000" required name="NOIDUNG" class="form-control"></textarea>
                             </div>
                         </div>
                     </div>
