--- a/WebThuvien/Views/Admin/XemChiTietSach.cshtml
+++ b/WebThuvien/Views/Admin/XemChiTietSach.cshtml
@@ -118,8 +118,10 @@
                                     <option value="@item.MATHELOAI" label="@item.TENTHELOAI" selected></option>
 
                                 }
-
-                                <option value="@item.MATHELOAI" label="@item.TENTHELOAI"></option>
+                                else
+                                {
+                                    <option value="@item.MATHELOAI" label="@item.TENTHELOAI"></option>
+                                }
 
                             }
 
@@ -137,8 +139,10 @@
                                     <option value="@item.MALINHVUC" label="@item.TENLINHVUC" selected></option>
 
                                 }
-
-                                <option value="@item.MALINHVUC" label="@item.TENLINHVUC"></option>
+                                else
+                                {
+                                    <option value="@item.MALINHVUC" label="@item.TENLINHVUC"></option>
+                                }
 
                             }
 
@@ -156,8 +160,10 @@
                                     <option value="@item.MANXB" label="@item.TENNXB" selected></option>
 
                                 }
-
-                                <option value="@item.MANXB" label="@item.TENNXB"></option>
+                                else
+                                {
+                                    <option value="@item.MANXB" label="@item.TENNXB"></option>
+                                }
 
                             }
 
