chỉnh sưa lại csdl
- lấy dữ liệu thống kê mượn trả
- người đăng nhập vào hệ thống

--- a/WebThuvien/Views/Admin/Danhmucsachmuon.cshtml
+++ b/WebThuvien/Views/Admin/Danhmucsachmuon.cshtml
@@ -239,7 +239,7 @@
                                                 </div>
                                             </div>
                                         </td>
-                                        <td><p title="Tên chủ thẻ : @item.NGUOIMUON">@item.MATHENGUOIMUON</p></td>
+                                        <td><p title="Mã thẻ : @item.MATHENGUOIMUON">@item.NGUOIMUON</p></td>
                                         <td>@ngaymuon</td>
                                         @if (item.NGAYTRA == null && thoigianquahan < 0)
                                         {
@@ -262,7 +262,7 @@
                 <!-- Export Datatable End -->
             </div>
             <div class="footer-wrap pd-20 mb-20 card-box">
-                DeskApp - Bootstrap 4 Admin Template By <a href="https://github.com/dropways" target="_blank">Ankit Hingarajiya</a>
+                Thư viện số hóa - <a href="/" target="_blank">Ban cơ yếu chính phủ</a>
             </div>
         </div>
     </div>
